TS-3747: Error in Huffman decoder for HPACK

(cherry picked from commit b04bc9b6adde276b07aa74549daac4ca4b5341e0)